Fixed palette not visible at start

--- a/system/client/index.css
+++ b/system/client/index.css
@@ -66,7 +66,7 @@ html{
 	width: 230px;
 	height: 420px;
 	/*bottom: 102px;*/
-	z-index:9;
+	z-index: 11;
   visibility: hidden;
 }
 #nodePalette {
